
- refine/one fortran interface can now store hex elements without modification
- added tetgen .smesh output format

Tue, Aug 23, 2016 : Released Refine 1.8.17

- added ref_usm3d2fun3d_mapbc ref_fun3d2usm3d_mapbc mapbc translation scripts
- ref_translate learned --rotate

Wed, Apr 27, 2016 : Released Refine 1.8.16

- refine/two fortran binding uses a single partition
- mid plane of twod grids in now a varaible (for pointwise)
- ref_export learned to extract twod grid to meshb format
- ref_export learned tecplot .plt
- ref_translate learned --scale
- ref_inflatable learned --rotate, --scale, and --origin
- ref_fefloa2d driver and ref_bamg_emulator added
- histogram fixed and made pretty for paper
- ref_arg created to parse arguments
- ref_metric_interpolate twod adapt uses background grid to interp metric 
- ref_surf2ugrid for debuging aflr3 problems
- ref_shard_prism_into_tet paralleized
- ref_import_bin_ugrid uses blocks to read contiguously (broke and fixed tags)
- ref_part uses blocks to read contiguously (face tags hop)
- ref_part uses longs for file offsets to read big grids
- ref_gather_cell contiguous faceids for cgns conversion 
- ref_adj better realloc heuristics for increased performance

Tue, Feb  3, 2015 : Released Refine 1.8.15

- implemented isotropic gradation control of anisotropic metric
- added Barral/McKenzie metric intersection
- quieted parMETIS debug statements that crashed MPI stdout buffers
- extended ref_inflatable use an origin at mean of Z min/max
- extended ref_inflatable to have an optional angle of attack argument

Mon, Apr 14, 2014 : Released Refine 1.8.14

- added missing BEGIN_C_DECLORATION C/C++ compatibility macros that
    should come in pairs

Mon, Mar 24, 2014 : Released Refine 1.8.13

- fix header error on SGI ICE due to wrong include location of parmetis.h
- eliminated compiler warnings 

Mon, Mar 10, 2014 : Released Refine 1.8.12

- allow use of older ParMETIS 3.* bindings

Wed, Feb 19, 2014 : Released Refine 1.8.11
